src/test/deca/context/valid/added/override.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  int x = 4;
}

class B extends A{
  int x = 3;
}

{}
