src/test/deca/context/invalid/added/void_field.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  void x;
}

{
}
